--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -84,7 +84,7 @@
             </picture>
             <div class="container">
                 <h2 class="documents__heading">
-                    Argement Documents<br>
+                    Argument Documents<br>
                     Clearing Services
                 </h2>
                 <div class="documents__text">
@@ -351,7 +351,7 @@
                 <div class="consulation__row">
                     <div class="consultation__text-content">
                         <h2 class="consultation__heading">
-                            <em>Anoshkina and Partners Legal Consultancy</em> —
+                            <em> Argument Documents Clearing Services</em> —
                             найди своих людей, чтобы уверенно идти вперед
                         </h2>
                     </div>
