--- a/src/partials/components/header.hbs
+++ b/src/partials/components/header.hbs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="page-header__row">
             <a href="#" class="page-header__logo">
-                Argement Documents<br>
+                Argument Documents<br>
                 Clearing Services
             </a>
             <div class="page-header__contacts">
