--- a/src/scss/_consultation.scss
+++ b/src/scss/_consultation.scss
@@ -162,6 +162,8 @@
         margin: 0 -1.8rem;
         padding-left: 2rem;
         padding-right: 2rem;
+        width: auto;
+        display: flex;
     }
     &:link,
     &:visited {
