Сообщение об успешной отправке

--- a/src/partials/components/modals.hbs
+++ b/src/partials/components/modals.hbs
@@ -34,3 +34,29 @@
 
     </div>
 </div>
+
+<div class="modal js-modal" id="callback-success">
+
+    <div class="modal__inner">
+        <button class="modal__close js-close-modal" type="button">
+            <svg width="45" height="45" aria-hidden="true" class="icon-cross">
+                <use xlink:href="#cross"></use>
+            </svg>
+        </button>
+        <img src="img/modal-shape.svg" alt="" class="modal__shape">
+        <div class="modal__content modal__content--success">
+            <h3 class="modal__heading">
+                Ваша заявка отправленна
+            </h3>
+            <div class="modal__text">
+                <p>
+                    Мы свяжемся с вами<br> в ближайшее время
+                </p>
+            </div>
+        </div>
+        <div class="modal__image-wrapper">
+            <img src="img/modal-image.jpg" alt="" class="modal__image">
+        </div>
+
+    </div>
+</div>
