--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -52,6 +52,19 @@
     }
 }
 
+.modal__shape {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60%;
+    height: auto;
+    z-index: 2;
+
+    @include breakpoint(mobile) {
+        display: none;
+    }
+}
+
 .modal__close {
     position: absolute;
     right: 2rem;
@@ -83,9 +96,35 @@
     padding: 6rem;
     padding-bottom: 8rem;
 
+    &--success {
+        min-height: 68rem;
+        justify-content: center;
+        position: relative;
+        z-index: 15;
+
+        @include breakpoint(mobile) {
+            min-height: auto;
+        }
+    }
+
     @include breakpoint(mobile) {
         padding: 2rem;
         padding-bottom: 4rem;
+    }
+}
+
+.modal__text {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.8rem;
+    line-height: 2.8rem;
+    margin-top: -6rem;
+    text-align: center;
+
+    @include breakpoint(mobile) {
+        margin-top: -2rem;
+        font-size: 1.6rem;
+        line-height: 1.3;
     }
 }
 
