--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -145,66 +145,87 @@
                     <h2 class="services__guarantees-heading">
                         Мы <em>гарантируем</em>
                     </h2>
-                    <ul class="services__guarantees-list">
-                        <li class="services__guarantees-list-item">
-                            <div class="services__guarantees-card">
-                                <h3 class="services__guarantees-card-title">
-                                    Подписание договора
-                                </h3>
-                                <div class="services__guarantees-card-text">
-                                    <p>
-                                        Мы работаем только по договору, который может быть заключен как с российской,
-                                        так и с зарубежной компанией. Принимая на себя ответственность за каждого своего
-                                        клиента, мы строго прописываем в договоре все наши обязательства.
-                                    </p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="services__guarantees-list-item">
-                            <div class="services__guarantees-card">
-                                <h3 class="services__guarantees-card-title">
-                                    Низкие и прозрачные цены
-                                </h3>
-                                <div class="services__guarantees-card-text">
-                                    <p>
-                                        Наши предложения выгодно отличают нас от конкурентов. Письменно фиксируя каждый
-                                        этап работы, мы всегда можем конкретизировать и обосновать стоимость оказываемых
-                                        услуг.
-                                    </p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="services__guarantees-list-item">
-                            <div class="services__guarantees-card">
-                                <h3 class="services__guarantees-card-title">
-                                    Индивидуальный подход
-                                </h3>
-                                <div class="services__guarantees-card-text">
-                                    <p>
-                                        Мы практикуем штучный, а не массовый подход к проектам. Работая с глубоким
-                                        погружением в каждый конкретный кейс, мы детально анализируем все потребности
-                                        наших клиентов, чтобы найти для них идеальное решение.
-                                    </p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="services__guarantees-list-item">
-                            <div class="services__guarantees-card">
-                                <h3 class="services__guarantees-card-title">
-                                    Профессионализм сотрудников
-                                </h3>
-                                <div class="services__guarantees-card-text">
-                                    <p>
-                                        Мы обеспечиваем профессиональную юридическую поддержку вашего бизнеса своей
-                                        командной работой высококлассных специалистов. Профессиональные компетенции
-                                        каждого из них проверены опытом и непрерывной практикой. За каждым клиентом
-                                        закрепляется персональный менеджер и юрист, которые всегда на связи и готовы
-                                        ответить на все вопросы.
-                                    </p>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
+                    <div class="services__guarantees-row">
+                        <div class="services__guarantees-col">
+                            <ul class="services__guarantees-list">
+                                <li class="services__guarantees-list-item">
+                                    <div class="services__guarantees-card">
+                                        <h3 class="services__guarantees-card-title">
+                                            Подписание договора
+                                        </h3>
+                                        <div class="services__guarantees-card-text">
+                                            <p>
+                                                Мы работаем только по договору, который может быть заключен как с
+                                                российской,
+                                                так и с зарубежной компанией. Принимая на себя ответственность за
+                                                каждого своего
+                                                клиента, мы строго прописываем в договоре все наши обязательства.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="services__guarantees-list-item">
+                                    <div class="services__guarantees-card">
+                                        <h3 class="services__guarantees-card-title">
+                                            Низкие и прозрачные цены
+                                        </h3>
+                                        <div class="services__guarantees-card-text">
+                                            <p>
+                                                Наши предложения выгодно отличают нас от конкурентов. Письменно фиксируя
+                                                каждый
+                                                этап работы, мы всегда можем конкретизировать и обосновать стоимость
+                                                оказываемых
+                                                услуг.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+
+                            </ul>
+                        </div>
+                        <div class="services__guarantees-col">
+                            <ul class="services__guarantees-list">
+
+                                <li class="services__guarantees-list-item">
+                                    <div class="services__guarantees-card">
+                                        <h3 class="services__guarantees-card-title">
+                                            Индивидуальный подход
+                                        </h3>
+                                        <div class="services__guarantees-card-text">
+                                            <p>
+                                                Мы практикуем штучный, а не массовый подход к проектам. Работая с
+                                                глубоким
+                                                погружением в каждый конкретный кейс, мы детально анализируем все
+                                                потребности
+                                                наших клиентов, чтобы найти для них идеальное решение.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="services__guarantees-list-item">
+                                    <div class="services__guarantees-card">
+                                        <h3 class="services__guarantees-card-title">
+                                            Профессионализм сотрудников
+                                        </h3>
+                                        <div class="services__guarantees-card-text">
+                                            <p>
+                                                Мы обеспечиваем профессиональную юридическую поддержку вашего бизнеса
+                                                своей
+                                                командной работой высококлассных специалистов. Профессиональные
+                                                компетенции
+                                                каждого из них проверены опытом и непрерывной практикой. За каждым
+                                                клиентом
+                                                закрепляется персональный менеджер и юрист, которые всегда на связи и
+                                                готовы
+                                                ответить на все вопросы.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
